--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -37,6 +37,7 @@ body{
     position: relative;
     top: auto;
     left: auto;
+    -webkit-transform: none;
     transform: none;
     margin-top: 0;
   }
